# Ing1-2023-2024-5-8

./: CMakeLists.txt  main.c
Game Management/: Score.c  Score.h  Timer.c  Timer.h
Player/: Player.c  Player.h
